--- a/app/src/entries/importkeystore/components/root/index.less
+++ b/app/src/entries/importkeystore/components/root/index.less
@@ -45,7 +45,7 @@
 			border-radius: 0.08rem;
 			box-sizing: border-box;
 			padding: 0.1rem;
-			color: rgba(255, 255, 255, 0.4);
+			color: #fff;
 		}
 		.filename {
 			width: 100%;
@@ -54,7 +54,7 @@
 			background: rgba(0, 0, 0, 0.17);
 			outline: none;
 			border-radius: 0.08rem;
-			color: rgba(255, 255, 255, 0.4);
+			color: #fff;
 		}
 		.icon-openfile {
 			display: block;
