--- a/app/src/entries/importmnemonic/components/root/index.less
+++ b/app/src/entries/importmnemonic/components/root/index.less
@@ -23,7 +23,10 @@
 		outline: none;
 		box-sizing: border-box;
 		padding: 0.1rem;
-		color: rgba(255, 255, 255, 0.4);
+		color: #fff;
+		&::-webkit-input-placeholder {
+			color: #53536b;
+		}
 	}
 	.mnemonic-btn {
 		padding: 1.53rem 0 0.36rem 0;
