--- a/app/src/entries/importwallet/components/root/index.less
+++ b/app/src/entries/importwallet/components/root/index.less
@@ -16,9 +16,8 @@
 			padding: 0.2rem 0;
 			box-sizing: border-box;
 			border-radius: 0.08rem;
-
 			&:hover {
-				background: rgba(255, 255, 255, 0.17);
+				// background: rgba(255, 255, 255, 0.17);
 				color: #47d184;
 				img {
 					width: 1.2rem;
@@ -33,6 +32,7 @@
 			.t {
 				font-size: 0.18rem;
 				margin-top: 0.2rem;
+				font-weight: 400;
 			}
 		}
 	}
@@ -50,6 +50,9 @@
 			align-items: center;
 			justify-content: center;
 			border-radius: 0.08rem;
+			&:hover {
+				background: linear-gradient(to bottom, #525275, #262642);
+			}
 			&.disnone {
 				background: none;
 			}
