--- a/app/src/entries/managewallet/components/root/index.less
+++ b/app/src/entries/managewallet/components/root/index.less
@@ -25,6 +25,9 @@
 				height: 1.6rem;
 				border-radius: 0.08rem;
 				background: #2e2e4c;
+				&:hover {
+					background: linear-gradient(to bottom, #525275, #262642);
+				}
 				&.inMnemonic {
 					height: auto;
 				}
