--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -63,10 +63,21 @@
 			color: #fff;
 			flex-flow: column;
 			justify-content: center;
-			// align-items: center;
+			border: 1px solid #f0744b;
 			cursor: pointer;
+			background: linear-gradient(to right, #69444c, #663437);
+			&:hover {
+				background: linear-gradient(to right, #f0764d, #e63f03);
+			}
 			&.disabled {
 				background: #c9c6c6;
+			}
+			&.gas {
+				background: linear-gradient(to right, #3b497c, #25346b);
+				border: 1px solid #265ed7;
+			}
+			&.gas:hover {
+				background: linear-gradient(to right, #5c89eb, #265ed7);
 			}
 			.t2 {
 				font-size: 0.12rem;
@@ -87,7 +98,13 @@
 		border-radius: 0.08rem;
 		box-sizing: border-box;
 		overflow: auto;
-		padding: 0.2rem;
+		padding: 0.2rem 0;
+		.wallet-out {
+			padding: 0 0.2rem;
+			&:hover {
+				background: #3a3a59;
+			}
+		}
 		.wallet-item {
 			padding: 0.25rem 0;
 			color: #fff;
@@ -117,7 +134,7 @@
 		}
 		.send-name {
 			margin-bottom: 0.1rem;
-			font-size: 0.18rem;
+			font-size: 0.16rem;
 			.t1 {
 				font-size: 0.14rem;
 			}
@@ -130,12 +147,11 @@
 			width: 100%;
 			height: 0.6rem;
 			background: rgba(0, 0, 0, 0.21);
-
 			border: none;
 			box-sizing: border-box;
 			padding: 0 0.1rem;
 			font-size: 0.18rem;
-			color: rgba(255, 255, 255, 0.4);
+			color: #fff;
 		}
 		.btn-box {
 			padding: 0.5rem 0 0.3rem 0;
@@ -168,13 +184,15 @@
 			padding: 0.4rem 0;
 			font-size: 0.24rem;
 		}
-
 		.qcode {
 			width: 2rem;
 			height: 2rem;
 			box-sizing: border-box;
-			border: 0.05rem solid #fff;
+			padding: 0.2rem;
+			border: 0.1rem solid #d3d3d3;
 			display: inline-block;
+			border-radius: 0.25rem;
+			background: #fff;
 		}
 		.btn-box {
 			padding: 0.5rem 0;
