--- a/app/src/entries/orderlist/components/root/index.less
+++ b/app/src/entries/orderlist/components/root/index.less
@@ -39,6 +39,9 @@
 		color: #fff;
 		.list-group {
 			border-bottom: 1px solid #37374a;
+			&.show {
+				background: #3a3a59;
+			}
 		}
 		.list-base {
 			padding: 0.14rem;
@@ -59,7 +62,7 @@
 		}
 		.order {
 			width: 1.5rem;
-			margin-right: 0.1rem;
+			margin-right: 0.2rem;
 			text-align: right;
 		}
 		.arrow {
@@ -89,7 +92,7 @@
 			display: flex;
 			flex-flow: wrap;
 			transition: height 0.2s linear;
-			height: 1.2rem;
+			height: 1.05rem;
 			overflow: auto;
 			.more-item {
 				padding: 0.07rem 0;
