--- a/app/src/entries/watchmanagewallet/components/root/index.less
+++ b/app/src/entries/watchmanagewallet/components/root/index.less
@@ -25,6 +25,9 @@
 				height: 1.6rem;
 				border-radius: 0.08rem;
 				background: #2e2e4c;
+				&:hover {
+					background: linear-gradient(to bottom, #525275, #262642);
+				}
 				&.inMnemonic {
 					height: auto;
 				}
@@ -41,6 +44,8 @@
 					color: #fff;
 					font-size: 0.18rem;
 					line-height: 0.22rem;
+					box-sizing: border-box;
+					padding: 0 0.2rem;
 				}
 				.hideBox {
 					input {
