--- a/app/src/components/menu/index.less
+++ b/app/src/components/menu/index.less
@@ -52,7 +52,7 @@
 					top: 0;
 				}
 				color: #44cb82;
-				background: #49495d;
+				background: linear-gradient(to right, #32324e, #3b3b55);
 				a {
 					color: #44cb82;
 				}
@@ -117,6 +117,7 @@
 			.menu-name {
 				padding-left: 0.86rem;
 				box-sizing: border-box;
+				font-weight: 400;
 			}
 			.menu-project {
 				background: url("../../assets/images/project_ico.png") no-repeat
