--- a/app/src/entries/createwallet/components/root/index.less
+++ b/app/src/entries/createwallet/components/root/index.less
@@ -19,9 +19,19 @@
 			position: relative;
 			transform-style: preserve-3d;
 			min-height: 3.4rem;
+			&:hover {
+				.wallet-img {
+					width: 1.2rem;
+					height: 1.2rem;
+				}
+				.t1 {
+					color: #47d184;
+				}
+			}
 			.wallet-img {
 				width: 1rem;
 				height: 1rem;
+				transition: all 0.3s linear;
 			}
 			.wallet-img1 {
 				width: 0.6rem;
@@ -31,7 +41,8 @@
 			}
 			.t1 {
 				margin-top: 0.3rem;
-				font-size: 0.24rem;
+				font-size: 0.18rem;
+				font-weight: 400;
 			}
 			.back-img {
 				text-align: center;
