--- a/app/src/entries/mnemonic/components/root/index.less
+++ b/app/src/entries/mnemonic/components/root/index.less
@@ -88,8 +88,9 @@
 						margin: 0.18rem 0.2rem 0 0;
 						color: #fff;
 						background: linear-gradient(
-							rgba(255, 205, 193, 1),
-							rgba(230, 61, 0, 1)
+							to bottom,
+							#f0774e,
+							#e63f03
 						);
 						border-radius: 8px;
 						cursor: pointer;
