--- a/app/src/entries/project/components/root/index.less
+++ b/app/src/entries/project/components/root/index.less
@@ -5,20 +5,24 @@
 		align-items: center;
 		.title {
 			width: 5.22rem;
-			height: 0.36rem;
-			line-height: 0.36rem;
-			margin-top: 0.4rem;
+			padding-top: 0.4rem;
 			text-align: center;
 			font-size: 0.29rem;
 			color: #47d184;
 			text-align: center;
 			font-weight: bold;
+			overflow: hidden;
+			transition: height 0.3s linear;
+			height: 1rem;
+			box-sizing: border-box;
+			&.hide {
+				height: 0;
+			}
 		}
 		.search-box {
 			position: relative;
 			width: 5.22rem;
 			height: 0.54rem;
-			margin-top: 0.56rem;
 			img {
 				position: absolute;
 				left: 0;
@@ -45,7 +49,7 @@
 			}
 		}
 		.tags-box {
-			margin-top: 0.3rem;
+			margin-top: 0.2rem;
 			width: 5.22rem;
 			.tagsname {
 				text-align: left;
@@ -75,9 +79,13 @@
 		.search-list {
 			width: 5.22rem;
 			position: absolute;
-			top: 2.5rem;
+			top: 2.2rem;
 			bottom: 0.1rem;
 			overflow: auto;
+			transition: top 0.3s linear;
+			&.focus {
+				top: 1.6rem;
+			}
 			.search-list-ul {
 				.search-cell {
 					width: 5.22rem;
@@ -104,6 +112,7 @@
 						flex-direction: column;
 						justify-content: space-between;
 						min-width: 0;
+						font-weight: 200;
 						.name {
 							font-size: 0.18rem;
 							line-height: 0.22rem;
