--- a/app/src/entries/addasset/components/root/index.less
+++ b/app/src/entries/addasset/components/root/index.less
@@ -21,6 +21,7 @@
 				margin: 0 auto;
 				margin-top: 0.2rem;
 				overflow: scroll;
+				margin-bottom: 0.2rem;
 				.assetCell {
 					position: relative;
 					width: 100%;
