--- a/app/src/entries/importend/components/root/index.less
+++ b/app/src/entries/importend/components/root/index.less
@@ -30,15 +30,7 @@
 		.endbtn {
 			padding: 2.4rem 0 0.36rem 0;
 			text-align: center;
-			.btn {
-				display: inline-block;
-				width: 2rem;
-				height: 0.44rem;
-				line-height: 0.44rem;
-				border-radius: 0.08rem;
-				color: #fff;
-				font-size: 0.18rem;
-				background: linear-gradient(to right, #82e0ac, #47c47f);
+			.button-green {
 				margin: 0 0.24rem;
 			}
 		}
