--- a/app/src/entries/neowallet/components/root/index.less
+++ b/app/src/entries/neowallet/components/root/index.less
@@ -5,10 +5,27 @@
 	padding: 0 0.4rem;
 	.box1 {
 		padding: 0.4rem 0;
-		.icon {
+		.icon-box {
 			width: 0.8rem;
 			height: 0.8rem;
 			margin-right: 0.2rem;
+			position: relative;
+			&:hover .icon2 {
+				display: block;
+			}
+		}
+		.icon2 {
+			width: 0.8rem;
+			height: 0.8rem;
+			position: absolute;
+			left: 0;
+			top: 0;
+			display: none;
+			z-index: 1;
+		}
+		.icon {
+			width: 0.8rem;
+			height: 0.8rem;
 		}
 		.money {
 			margin-left: 0.2rem;
@@ -103,6 +120,16 @@
 			padding: 0 0.2rem;
 			&:hover {
 				background: #3a3a59;
+				.delete {
+					display: inline-block;
+				}
+			}
+			.delete {
+				display: none;
+				color: #5c89eb;
+				font-size: 0.12rem;
+				cursor: pointer;
+				margin-left: 0.2rem;
 			}
 		}
 		.wallet-item {
