--- a/app/src/entries/mnemonicsure/components/root/index.less
+++ b/app/src/entries/mnemonicsure/components/root/index.less
@@ -59,10 +59,10 @@
 				display: block;
 				width: 2rem;
 				height: 0.44rem;
-				background: linear-gradient(
-					rgba(130, 224, 172, 1),
-					rgba(71, 196, 127, 1)
-				);
+				// background: linear-gradient(
+				// 	rgba(130, 224, 172, 1),
+				// 	rgba(71, 196, 127, 1)
+				// );
 				border-radius: 8px;
 				color: #fff;
 			}
